--- a/AppAndroid/app/src/main/res/values/strings.xml
+++ b/AppAndroid/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="mua_credit">Mua Credit</string>
     <string name="t_i_kho_n">Tài khoản</string>
     <string name="activity2_name">login</string>
+    <string name="trang_chu">Trang Chu</string>
 </resources>
